--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,6 +5,8 @@
 @layer base {
   body {
     @apply h-full bg-white text-gray-500 antialiased dark:bg-gray-900 dark:text-gray-400;
+    padding: env(safe-area-inset-top, 20px) env(safe-area-inset-right, 20px)
+      env(safe-area-inset-bottom, 20px) env(safe-area-inset-left, 20px);
   }
   #app {
     @apply h-full;
